<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainPage" >

    <ImageView
        android:id="@+id/logoView4"
        android:layout_width="179dp"
        android:layout_height="122dp"
        android:layout_marginStart="95dp"
        android:layout_marginTop="156dp"
        android:layout_marginEnd="95dp"
        android:layout_marginBottom="123dp"
        android:contentDescription="logo"
        app:layout_constraintBottom_toTopOf="@+id/chatBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logofirstpage" />

    <Button
        android:id="@+id/chatBtn"
        android:layout_width="139dp"
        android:layout_height="68dp"
        android:layout_marginStart="60dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/custom_input"
        android:drawableTop="@drawable/ic_chat"
        android:onClick="onClick"
        android:text="@string/chatBtn"
        app:layout_constraintBottom_toTopOf="@+id/billsBtn"
        app:layout_constraintEnd_toStartOf="@+id/listShopsBtn"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/listShopsBtn"
        android:layout_width="139dp"
        android:layout_height="68dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="60dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/custom_input"
        android:onClick="onClick"
        android:drawableTop="@drawable/ic_listshops"
        android:text="@string/listShopsBtn"
        app:layout_constraintBottom_toTopOf="@+id/billsBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/chatBtn" />


    <Button
        android:id="@+id/billsBtn"
        android:layout_width="139dp"
        android:layout_height="68dp"
        android:layout_marginBottom="176dp"
        android:background="@drawable/custom_input"
        android:drawableTop="@drawable/ic_bills"
        android:onClick="showPopupBills"
        android:text="@string/billsBtn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/menuBtn"
        android:layout_width="37dp"
        android:layout_height="32dp"
        android:layout_marginStart="9dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/custom_input"
        android:drawableTop="@drawable/ic_menu"
        android:onClick="showPopup"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>